Ditch Google collect methods when Java ones exists